Fix the 2fa qr code width on small screens

--- a/src/static/account.css
+++ b/src/static/account.css
@@ -18,6 +18,7 @@ body {
 
 .qrcode {
     width: 500px;
+    max-width: 100%;
 }
 
 .pastes {
